# intro-to-github-mood-maestro

./: .gitignore  LICENSE  README.md  activity1.py  app.py  config.py  data_moods.csv  db.py  home.css  home.html  index.css  index.html  liked_songs.css  liked_songs.html  login.py  playlists.css  playlists.html  pyproject.toml  secrets_template.ini  tasks.py  test.py  welcome.css  welcome.html  worker.py
static/: create_playlist.css  create_playlist.js  liked_songs.css  playlists.css  script.js  table.css  table2.css  welcome.css
static/Unused/: create_playlist.js
templates/: create_playlist.html  home.html  liked_songs.html  liked_songs_ajax.html  playlists.html  table.html  table2.html  welcome.html
templates/Unused/: liked_songs(old).html  playlists(old).html
